# FLOUR

./: .gitignore  Cargo.toml  README.rst  flour.pyi  justfile  pyproject.toml
.github/workflows/: CI.yml  build_and_publish_testing_image.yml  tests.yml
benchmarks/: benchmark_read_cube.py  benchmark_write_cube.py  benchmark_xyz.py
docker_testing_environment/: Dockerfile
src/: lib.rs
tests/: test_cube.py  test_xyz.py
