[package]
name = "flour"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flour"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
numpy = "0.17"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
